@@ -1,9 +1,10 @@
 Version 4.12
 
+* IMPROVEMENT: Separated extender and signer settings in tests and properties.
+* IMPROVEMENT: Added convenience methods for creating TLVElement and setting its content.
 * BUGFIX: KSI close now closes publications client/service.
 * BUGFIX: Tests are now closing services, clients and KSI.
 * BUGFIX: Hash data imprint when hashing DataHash object.
-* IMPROVEMENT: Separated extender and signer settings in tests and properties.
 
 Version 4.11
 
